src/tests/variable-declarations/7.txt
variable-declarations/7.c:2:5: error: variable 'a' undeclared
     a;
     ^
